##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(rosdoc_markdown_foo)

##############################################################################
# Find Packages
##############################################################################

find_package(catkin)

##############################################################################
# Catkin
##############################################################################

catkin_package()

##############################################################################
# Sources
##############################################################################

##############################################################################
# Installs
##############################################################################

