<?xml version="1.0"?>
<package>
  <name>rosdoc_markdown_foo</name>
  <version>0.1.0</version>
  <description>How to embed markdown in your doxygen documentation.</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>
</package>
